--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ nixPkgs = ['python3', 'gcc', 'pkg-config']
 [phases.install]
 cmds = [
     'python -m venv --copies /opt/venv',
-    '. /opt/venv/bin/activate && pip install -r requirements.txt'
+    '. /opt/venv/bin/activate && pip install -r backend/requirements.txt'
 ]
 
 [start]
