--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ youtube-transcript-api==0.6.1
 pytube==15.0.0
 openai>=1.55.3
 python-dotenv==1.0.0
-requests==2.31.0 
+requests==2.31.0
+aiofiles==23.2.1 
